# pyBenD

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: doc-test.yml  python-package.yml  release.yml
docs/: conf.py  index.rst  publications.rst  pybend.algorithms.rst  pybend.model.rst  pybend.rst  pybend.utils.rst
notebooks/: bend_apex_detection.ipynb  meander_morphometry_analysis.ipynb  seine_river_migration_analysis.ipynb
notebooks/data/: SeineRiverCenterlines.csv  centerline_Abreu_et_al_2003.csv
src/pybend/algorithms/: centerline_process_function.py  plot_functions.py  pybend_io.py  synthetic_bends.py
src/pybend/model/: Bend.py  BendEvolution.py  Centerline.py  CenterlineCollection.py  ClPoint.py  Isoline.py  Morphometry.py  Section.py  enumerations.py
src/pybend/utils/: globalParameters.py  logging.py
tests/: tests_Bend.py  tests_BendEvolution.py  tests_Centerline.py  tests_CenterlineCollection.py  tests_CenterlineCollectionWarper.py  tests_ClPoint.py  tests_Isoline.py  tests_Morphometry.py  tests_Section.py  tests_centerline_process_functions.py  tests_pybend_io.py  tests_synthetic_bends.py
tests/data/: centerline_Collection_test_data.csv  centerline_Collection_test_data10.csv  centerline_Collection_test_data40.csv  centerline_Collection_test_data70.csv  centerline_flumy2500.csv  centerline_flumy_data.csv  centerline_kml.kml  centerline_xyz_data.csv  centerlines.csv  end_members_from_Ghinassi2014_Expansion.csv
